[project]
name = "redactroid"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate==1.5.2",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.11.14",
    "aiosignal==1.3.2",
    "altair==5.5.0",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "arrow==1.3.0",
    "attrs==25.3.0",
    "blinker==1.9.0",
    "cachetools==5.5.2",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "colorama==0.4.6",
    "dataclasses-json==0.6.7",
    "distro==1.9.0",
    "fastapi==0.115.12",
    "filelock==3.18.0",
    "frozenlist==1.5.0",
    "fsspec==2025.3.0",
    "gitdb==4.0.12",
    "gitpython==3.1.44",
    "greenlet==3.1.1",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "httpx-sse==0.4.0",
    "huggingface-hub==0.29.3",
    "idna==3.10",
    "jinja2==3.1.6",
    "jiter==0.9.0",
    "joblib==1.4.2",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "langchain==0.3.21",
    "langchain-community==0.3.20",
    "langchain-core==0.3.49",
    "langchain-google-genai>=2.1.2",
    "langchain-huggingface==0.1.2",
    "langchain-openai==0.3.11",
    "langchain-text-splitters==0.3.7",
    "langsmith==0.3.19",
    "markupsafe==3.0.2",
    "marshmallow==3.26.1",
    "mpmath==1.3.0",
    "multidict==6.2.0",
    "mypy-extensions==1.0.0",
    "narwhals==1.33.0",
    "networkx==3.4.2",
    "numpy==2.2.4",
    "openai==1.68.2",
    "orjson==3.10.16",
    "packaging==24.2",
    "pandas==2.2.3",
    "pillow==11.1.0",
    "propcache==0.3.1",
    "protobuf==5.29.4",
    "psutil==7.0.0",
    "pyarrow==19.0.1",
    "pydantic==2.10.6",
    "pydantic-core==2.27.2",
    "pydantic-settings==2.8.1",
    "pydeck==0.9.1",
    "pymupdf==1.25.4",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "python-multipart==0.0.20",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "referencing==0.36.2",
    "regex==2024.11.6",
    "requests==2.32.3",
    "requests-toolbelt==1.0.0",
    "rpds-py==0.24.0",
    "safetensors==0.5.3",
    "scikit-learn==1.6.1",
    "scipy==1.15.2",
    "sentence-transformers==4.0.1",
    "six==1.17.0",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.39",
    "starlette==0.46.1",
    "streamlit==1.44.1",
    "sympy==1.13.1",
    "tenacity==9.0.0",
    "threadpoolctl==3.6.0",
    "tiktoken==0.9.0",
    "tokenizers==0.21.1",
    "toml==0.10.2",
    "tornado==6.4.2",
    "tqdm==4.67.1",
    "typing-extensions==4.13.0",
    "typing-inspect==0.9.0",
    "tzdata==2025.2",
    "urllib3==2.3.0",
    "uvicorn==0.34.0",
    "watchdog==6.0.0",
    "watchfiles==1.0.4",
    "websockets==15.0.1",
    "yarl==1.18.3",
    "zstandard==0.23.0",
]
